remove unneeded atributes
